Assignments/4/testing2/sample-output.txt
Thu Oct 27 22:32:34 UTC 2022
Linux LinuxMachine 5.10.124-linuxkit #1 SMP Thu Jun 30 08:19:10 UTC 2022 x86_64 x86_64 x86_64 GNU/Linux
uid=1000(cssuwbstudent) gid=1000(cssuwbstudent) groups=1000(cssuwbstudent),10(wheel)
=====================================================
1. Compiles without warnings with -Wall -Wextra flags
=====================================================
=====================================================
2. Runs and produces correct output
=====================================================
test1 done.
test2 done.
test3 done.
test4 done.
Done.
=====================================================
3. clang-tidy warnings are fixed
=====================================================
11526 warnings and 1 error generated.
Error while processing /home/cssuwbstudent/pisan/bitbucket/pisan342/ass4-skiplist-solution/main.cpp.
16073 warnings and 2 errors generated.
Error while processing /home/cssuwbstudent/pisan/bitbucket/pisan342/ass4-skiplist-solution/random.cpp.
30323 warnings and 3 errors generated.
Error while processing /home/cssuwbstudent/pisan/bitbucket/pisan342/ass4-skiplist-solution/skiplist.cpp.
/usr/include/wchar.h:35:10: error: 'stddef.h' file not found [clang-diagnostic-error]
#include <stddef.h>
         ^~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/cxxabi_init_exception.h:38:10: error: 'stddef.h' file not found [clang-diagnostic-error]
#include <stddef.h>
         ^~~~~~~~~~
Suppressed 30323 warnings (30323 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).
=====================================================
4. clang-format does not find any formatting issues
=====================================================
Running clang-format on ./main.cpp
Running clang-format on ./random.cpp
Running clang-format on ./skiplist.cpp
=====================================================
5. No memory leaks using g++
=====================================================
=====================================================
6. No memory leaks using valgrind, look for "definitely lost" 
=====================================================
==88899== Memcheck, a memory error detector
==88899== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
==88899== Using Valgrind-3.18.1 and LibVEX; rerun with -h for copyright info
==88899== Command: ./a.out
==88899== Parent PID: 88605
==88899== 
==88899== 
==88899== HEAP SUMMARY:
==88899==     in use at exit: 0 bytes in 0 blocks
==88899==   total heap usage: 180 allocs, 180 frees, 83,522 bytes allocated
==88899== 
==88899== All heap blocks were freed -- no leaks are possible
==88899== 
==88899== For lists of detected and suppressed errors, rerun with: -s
==88899== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)


Thu Oct 27 22:32:49 UTC 2022
=====================================================
To create an output.txt file with all the output from this script
Run the below command
      ./create-output.sh > output.txt 2>&1 
=====================================================
